.gitignore modified to ignore saved images

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+JetsonCode/imgs/*
+
 # Created by https://www.gitignore.io/api/c++,cuda,cmake,matlab
 # Edit at https://www.gitignore.io/?templates=c++,cuda,cmake,matlab
 
