camera thread and argument parsing moved to a separate file

--- a/JetsonCode/Makefile
+++ b/JetsonCode/Makefile
@@ -177,6 +177,33 @@ Settings.cpp.s:
 	$(MAKE) -f CMakeFiles/3D_scanning.dir/build.make CMakeFiles/3D_scanning.dir/Settings.cpp.s
 .PHONY : Settings.cpp.s
 
+argpars.o: argpars.cpp.o
+
+.PHONY : argpars.o
+
+# target to build an object file
+argpars.cpp.o:
+	$(MAKE) -f CMakeFiles/3D_scanning.dir/build.make CMakeFiles/3D_scanning.dir/argpars.cpp.o
+.PHONY : argpars.cpp.o
+
+argpars.i: argpars.cpp.i
+
+.PHONY : argpars.i
+
+# target to preprocess a source file
+argpars.cpp.i:
+	$(MAKE) -f CMakeFiles/3D_scanning.dir/build.make CMakeFiles/3D_scanning.dir/argpars.cpp.i
+.PHONY : argpars.cpp.i
+
+argpars.s: argpars.cpp.s
+
+.PHONY : argpars.s
+
+# target to generate assembly for a file
+argpars.cpp.s:
+	$(MAKE) -f CMakeFiles/3D_scanning.dir/build.make CMakeFiles/3D_scanning.dir/argpars.cpp.s
+.PHONY : argpars.cpp.s
+
 # Help Target
 help:
 	@echo "The following are some of the valid targets for this Makefile:"
@@ -192,6 +219,9 @@ help:
 	@echo "... Settings.o"
 	@echo "... Settings.i"
 	@echo "... Settings.s"
+	@echo "... argpars.o"
+	@echo "... argpars.i"
+	@echo "... argpars.s"
 .PHONY : help
 
 
