--- a/JetsonCode/config.json
+++ b/JetsonCode/config.json
@@ -2,7 +2,7 @@
     "verbose": false,
     "debug": false,
     "show": true,
-    "show_fullscreen": true,
+    "show_fullscreen": false,
     "show_markers": true,
     "show_labels": true,
     "keyboard": false,
@@ -23,6 +23,6 @@
     "img_offset_R2G_Y": 20,
     "backprop_z_R": 3100,
     "backprop_z_G": 2400,
-    "improc_thrs_G": 90,
+    "improc_thrs_G": 100,
     "improc_thrs_R": 140
 }
